cluster/apps/default/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
    spec:
      containers:
      - name: plex
        image: linuxserver/plex:1.28.1 # {"$imagepolicy": "flux-system:plex"}
        volumeMounts:
        - mountPath: /config
          name: config-volume
        - mountPath: /media
          name: media-volume
        ports:
        - containerPort: 32400
        readinessProbe:
          httpGet:
            path: /identity
            port: 32400
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /identity
            port: 32400
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: plex-config
      - name: media-volume
        nfs:
          server: sc01.${SECRET_PRIVATE_DOMAIN}
          path: /mnt/dpool/media
      hostNetwork: true
      securityContext:
        privileged: true
      dnsPolicy: ClusterFirstWithHostNet
