cluster/apps/default/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.9
spec:
  ports:
    - port: 32400
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: plex
